fix: nav bar not visible in light mode

--- a/media/css/query.css
+++ b/media/css/query.css
@@ -126,7 +126,7 @@ button:disabled:hover {
 }
 
 .topnav a {
-	color: #fff;
+	color: #b8b5b5;
 	text-decoration: none;
 	font-size: 16px;
 	padding: 4px 5px;
